--- a/View/alterarPerfil.html
+++ b/View/alterarPerfil.html
@@ -6,6 +6,8 @@
     <title>Area de Seleção</title>
     <link rel="stylesheet" href="./css/globalStyle.css">
     <link rel="stylesheet" href="./css/alterarPerfil.css">
+    <link rel="icon" href="./img/logo.png" />
+
 </head>
 <body>
   <header>
