--- a/View/artigos.html
+++ b/View/artigos.html
@@ -6,7 +6,7 @@
     <title>Como pagar imposto de renda</title>
     <link rel="stylesheet" href="./css/globalStyle.css" />
     <link rel="stylesheet" href="./css/artigos.css" />
-    <link rel="icon" href="../img/logo.png" />
+    <link rel="icon" href="./img/logo.png" />
   </head>
   <body>
     <div class="aba">
