--- a/View/cadastroUsuario.html
+++ b/View/cadastroUsuario.html
@@ -6,7 +6,7 @@
     <title>Cadastrar Usuário</title>
     <link rel="stylesheet" href="./css/cadastroUsuario.css" />
     <link rel="stylesheet" href="./css/globalStyle.css" />
-    <link rel="icon" href="../img/logo.png" />
+    <link rel="icon" href="./img/logo.png" />
   </head>
   <body>
     <main>
