--- a/View/redefinir2.html
+++ b/View/redefinir2.html
@@ -6,7 +6,7 @@
     <title>Redefinir Senha</title>
     <link rel="stylesheet" href="./css/globalStyle.css" />
     <link rel="stylesheet" href="./css/redefinir2.css" />
-    <link rel="icon" href="../img/logo.png" />
+    <link rel="icon" href="./img/logo.png" />
   </head>
   <body>
     
@@ -25,8 +25,8 @@
     <main>
       <div class="container">
         <div id="divCampos">
-          <p>Enviamos um código de verificação para você</p>
-          <p>Insira nos campos abaixo o código recebido por email</p>
+          <p id="primeiraLinha">Vamos enviar o codigo de verificação via email </p>
+           <p id="segundaLinha"> Insira nos campos abaixo o código recebido</p>
           <div>
             <form action="">
               <input
