--- a/View/tela-financeiro.html
+++ b/View/tela-financeiro.html
@@ -3,32 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pessoal</title>
+    <title>Financeiro</title>
     <link rel="stylesheet" href="./css/globalStyle.css" />
     <link rel="stylesheet" href="./css/tela-artigos.css" />
-    <link rel="icon" href="../img/logo.png" />
+  <link rel="icon" href="./img/logo.png">
   </head>
   <body>
-    <header>
-      <div id="abaInfos">
-        <figure id="logoFigure">
-          <img id="imgLogo" src="./img/logo.png" alt="Logo" />
-        </figure>
-
-        <figure id="nomeFigure">
-          <img src="./img/manualJovem.png" alt="Manual_do_Jovem" id="nomeImg" />
-        </figure>
-      </div>
-    </header>
+      <header>
+        <div id="abaInfos">
+            <figure id="logoFigure">
+              <img id="imgLogo"
+                src="./img/logo.png" alt="Logo"
+              />
+            </figure>
+        
+            <figure id="nomeFigure">
+              <img src="./img/manualJovem.png" alt="Manual_do_Jovem" id="nomeImg">
+            </figure>
+         
+        </div>
+      </header>
 
     <div class="container">
 
-      <a href="" id="aCriar"><button id="btnCriar"></button></a>
+      <a href="./criarArtigo.html" id="aCriar"><button id="btnCriar"></button></a>
 
       <button class="aba">
-        <h3>Como tirar carteira de motorista</h3>
+        <h3>Como paga um imposto de renda</h3>
         <p>Defina seus objetivos, seja claro e conciso</p>
-        <div class="author">Eduarda menezas</div>
+        <div class="author">Érico Vespúcia</div>
       </button>
 
       <button class="aba">
