--- a/View/tela-profissional.html
+++ b/View/tela-profissional.html
@@ -6,7 +6,7 @@
     <title>Profissional</title>
     <link rel="stylesheet" href="./css/globalStyle.css" />
     <link rel="stylesheet" href="./css/tela-artigos.css" />
-    <link rel="icon" href="../img/logo.png" />
+    <link rel="icon" href="./img/logo.png" />
   </head>
   <body>
     <header>
@@ -23,7 +23,7 @@
 
     <div class="container">
 
-      <a href="" id="aCriar"><button id="btnCriar"></button></a>
+      <a href="./criarArtigo.html" id="aCriar"><button id="btnCriar"></button></a>
 
       <button class="aba">
         <h3>Como aprimorar seu currículo</h3>
