--- a/View/areaSelecionar.html
+++ b/View/areaSelecionar.html
@@ -6,7 +6,7 @@
     <title>Area de Seleção</title>
     <link rel="stylesheet" href="./css/globalStyle.css" />
     <link rel="stylesheet" href="./css/areaSelecionar.css" />
-    <link rel="icon" href="../img/logo.png" />
+    <link rel="icon" href="./img/logo.png" />
   </head>
   <body>
     <header>
