--- a/View/contato.html
+++ b/View/contato.html
@@ -6,7 +6,7 @@
     <title>Contato</title>
     <link rel="stylesheet" href="./css/globalStyle.css">
     <link rel="stylesheet" href="./css/contato.css">
-    <link rel="icon" href="../img/logo.png" />
+    <link rel="icon" href="./img/logo.png" />
   </head>
 <body>
     <header>
@@ -28,7 +28,7 @@
         <textarea placeholder="Escreva sua dúvida ou sua reclamação"></textarea>
         <button>ENVIAR</button>
         <p>ou</p>
-        <a href="mailto:ericakleinkauf23@gmail.com" target="_blank">suportemanualdojovem@gmail.com</a>
+        <a href="mailto:suportemanualdojovem@gmail.com" target="_blank">suportemanualdojovem@gmail.com</a>
       </div>
     </main>
       <footer>
