--- a/View/css/tela-artigos.css
+++ b/View/css/tela-artigos.css
@@ -82,20 +82,21 @@ html {
 }
 
 #aCriar {
-  width: 110px;
-  height: 110px;
+  width: 100px;
+  height: 100px;
   bottom: 80px;
-  right: 10px;
+  right: 15px;
   border-radius: 200px;
+  box-shadow: inset 2px 2px 5px #263044;
   display: flex;
   position: fixed;
-  background-color: rgb(29, 29, 190);
-  border: 2px solid black;
+  background-color: #4c4199;
   background-image: url("../img/criarImg.png");
   background-size: 70%;
   background-position: center;
   background-repeat: no-repeat;
 }
 
-#btnCriar {
+#aCriar:hover{
+  background-color: #4230b3;
 }
