--- a/View/novaSenha.html
+++ b/View/novaSenha.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Redefinir Senha</title>
     <link rel="stylesheet" href="./css/globalStyle.css" />
-    <link rel="icon" href="../img/logo.png" />
+    <link rel="icon" href="./img/logo.png" />
   </head>
   <body>
     <header>
