--- a/View/redefinir.html
+++ b/View/redefinir.html
@@ -6,7 +6,7 @@
     <title>Redefinir Senha</title>
     <link rel="stylesheet" href="./css/globalStyle.css" />
     <link rel="stylesheet" href="./css/redefinir.css" />
-    <link rel="icon" href="../img/logo.png" />
+    <link rel="icon" href="./img/logo.png" />
   </head>
   <body>
     <header>
@@ -25,12 +25,8 @@
       <div id="container">
         <div id="filho1">
           <p>
-            Esqueceu da sua senha ou está com <br />
-            problemas ao entrar em sua conta?
-          </p>
-          <p>
-            Insira seu Email ou número de telefone <br />
-            para enviarmos um código de confirmação.
+            Insira seu email ou número de telefone <br />
+            para enviarmos o código de confirmação.
           </p>
           <input
             type="text"
