atualização Manual do jovem

--- a/View/artigos.html
+++ b/View/artigos.html
@@ -24,6 +24,12 @@
             />
           </figure>
         </div>
+
+                <div id="fotoDiv">
+        <button id="fotoBtn" type="button">
+          <img src="./img/fotoPadrao.png" alt="Foto Perfil" id="fotoImg" />
+        </button>
+        </div>
       </header>
 
       <main id="container">
@@ -43,5 +49,8 @@
     <footer>
       <p>&copy; 2025 Desenvolvido por TDS. Todos os direitos reservados.</p>
     </footer>
+
+    <script src="./js/alterarFotoPerfil.js"></script>
+    <script src="./js/areaOpcoes.js" defer></script>
   </body>
 </html>
