--- a/View/editarPerfil.html
+++ b/View/editarPerfil.html
@@ -1,41 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Editar</title>
-    <link rel="stylesheet" href="./css/globalStyle.css">
-    <link rel="stylesheet" href="./css/editarPerfil.css">
+    <link rel="stylesheet" href="./css/globalStyle.css" />
+    <link rel="stylesheet" href="./css/editarPerfil.css" />
     <link rel="icon" href="./img/logo.png" />
   </head>
-<body>
+  <body>
     <header>
-        <div id="abaInfos">
-            <figure id="logoFigure">
-              <img id="imgLogo"
-                src="./img/logo.png" alt="Logo"
-              />
-            </figure>
-        
-            <figure id="nomeFigure">
-              <img src="./img/manualJovem.png" alt="Manual_do_Jovem" id="nomeImg">
-            </figure>
-        </div>
-      </header>
+      <div id="abaInfos">
+        <figure id="logoFigure">
+          <img id="imgLogo" src="./img/logo.png" alt="Logo" />
+        </figure>
 
-      <div id="container">
-          <h2>Configure seu perfil</h2>
-    <section id="forms">
-          <input type="text" placeholder="Alterar nome de usuário">
-          <input type="email" placeholder="Alterar email">
-          <input type="password" placeholder="Alterar senha">
-          <input type="password" placeholder="Confirmar Senha">
-    
-          <button>ALTERAR INFORMAÇÕES</button>
-</section>
+        <figure id="nomeFigure">
+          <img src="./img/manualJovem.png" alt="Manual_do_Jovem" id="nomeImg" />
+        </figure>
       </div>
-      <footer>
-        <p>&copy; 2025 Desenvolvido por TDS. Todos os direitos reservados.</p>
-      </footer>
-</body>
+
+      <div id="fotoDiv">
+        <button id="fotoBtn" type="button">
+          <img src="./img/fotoPadrao.png" alt="Foto Perfil" id="fotoImg" />
+        </button>
+      </div>
+    </header>
+
+    <div id="container">
+      <h2>Configure seu perfil</h2>
+      <section id="forms">
+        <input type="text" placeholder="Alterar nome de usuário" />
+        <input type="email" placeholder="Alterar email" />
+        <input type="password" placeholder="Alterar senha" />
+        <input type="password" placeholder="Confirmar Senha" />
+
+        <button>ALTERAR INFORMAÇÕES</button>
+      </section>
+    </div>
+    <footer>
+      <p>&copy; 2025 Desenvolvido por TDS. Todos os direitos reservados.</p>
+    </footer>
+
+    <script src="./js/alterarFotoPerfil.js"></script>
+    <script src="./js/areaOpcoes.js" defer></script>
+  </body>
 </html>
