--- a/View/tela-profissional.html
+++ b/View/tela-profissional.html
@@ -19,11 +19,18 @@
           <img src="./img/manualJovem.png" alt="Manual_do_Jovem" id="nomeImg" />
         </figure>
       </div>
+
+      <div id="fotoDiv">
+        <button id="fotoBtn" type="button">
+          <img src="./img/fotoPadrao.png" alt="Foto Perfil" id="fotoImg" />
+        </button>
+      </div>
     </header>
 
     <div class="container">
-
-      <a href="./criarArtigo.html" id="aCriar"><button id="btnCriar"></button></a>
+      <a href="./criarArtigo.html" id="aCriar"
+        ><button id="btnCriar"></button
+      ></a>
 
       <button class="aba">
         <h3>Como aprimorar seu currículo</h3>
@@ -90,5 +97,8 @@
         <button id="insta"></button>
       </footer>
     </div>
+
+    <script src="./js/alterarFotoPerfil.js"></script>
+    <script src="./js/areaOpcoes.js" defer></script>
   </body>
 </html>
