--- a/View/alterarFotoPerfil.html
+++ b/View/alterarFotoPerfil.html
@@ -2,60 +2,73 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alterar Foto de Perfil</title>
-    <link rel="stylesheet" href="./css/alterarFotoPerfil.css">
-    <link rel="stylesheet" href="./css/globalStyle.css">
-    <link rel="icon" href="./img/logo.png" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Alterar Foto de Perfil</title>
+  <link rel="stylesheet" href="./css/alterarFotoPerfil.css">
+  <link rel="icon" href="./img/logo.png" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="./css/globalStyle.css">
 
 </head>
 
 <body>
-    <header>
-        <div id="abaInfos">
-            <figure id="logoFigure">
-                <img id="imgLogo" src="./img/logo.png" alt="Logo" />
-            </figure>
-
-            <figure id="nomeFigure">
-                <img src="./img/manualJovem.png" alt="Manual_do_Jovem" id="nomeImg">
-            </figure>
-        </div>
-
-        <div id="fotoDiv">
-            <button id="fotoBtn" type="button">
-                <img src="./img/fotoPadrao.png" alt="Foto Perfil" id="fotoImg" />
-            </button>
-        </div>
-    </header>
-
-    <div id="divInfos" class="hidden">
-        <div id="opcoesPerfil">
-            <a href="./editarPerfil.html" class="hrefPerfil">Editar Perfil</a>
-            <a href="./contato.html" class="hrefPerfil">Entrar em contato</a>
-            <a href="./redefinir.html" class="hrefPerfil">Redefinir Senha</a>
-            <a href="alterarFotoPerfil.html" class="hrefPerfil">Alterar foto de perfil</a>
-        </div>
+  <header
+    class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom"
+    style="display: flex; width: 100vw; height: 13vh;background: linear-gradient(50deg,#4c4199, #111827); ">
+    <div class="col-md-3 mb-2 mb-md-0">
+      <a href="/" class="d-inline-flex align-items-center text-decoration-none">
+        <img src="./img/logo.png" alt="Logo" width="60" height="50" class="me-2" />
+        <span class="text-white fs-4">Manual do Jovem</span>
+      </a>
     </div>
 
-    <main id="container">
-        <form for="file" class="file-input">
-            <div class="drop-zone" id="drop-zone">
-                <p id="text"><b>Selecione/solte</b> sua nova foto </p>
-            </div>
-            <input type="file" id="file">
-        </form>
-        <button id="alterarFoto" onclick="removerFoto()">Salvar nova foto de perfil</button>
+    <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+      <li><a href="./tela-profissional.html" class="nav-link px-2 icon-home ativo"
+          style="color: white;">Profissional</a>
+      </li>
+      <li><a href="./tela-financeiro.html" class="nav-link px-2 icon-criar ativo" style="color: white;"> Financeiro</a>
+      </li>
+      <li><a href="./tela-pessoal.html" class="nav-link px-2 icon-insc ativo" style="color: white;">Pessoal</a>
+      </li>
 
-        
-        <footer class="footer">
-            © 2025 Desenvolvido por TDS. Todos os direitos reservados.
-        </footer>
-    </main>
+      <div id="fotoDiv">
+        <button id="fotoBtn" type="button">
+          <img src="./img/fotoPadrao.png" alt="Foto Perfil" id="fotoImg" />
+        </button>
+      </div>
+    </ul>
 
-    <script src="./js/alterarFotoPerfil.js"></script>
-    <script src="./js/areaOpcoes.js"></script>
+  </header>
+
+  der>
+
+  <div id="divInfos" class="hidden">
+    <div id="opcoesPerfil">
+      <a href="./editarPerfil.html" class="hrefPerfil">Editar Perfil</a>
+      <a href="./contato.html" class="hrefPerfil">Entrar em contato</a>
+      <a href="./redefinir.html" class="hrefPerfil">Redefinir Senha</a>
+      <a href="alterarFotoPerfil.html" class="hrefPerfil">Alterar foto de perfil</a>
+    </div>
+  </div>
+
+  <main id="container">
+    <form for="file" class="file-input">
+      <div class="drop-zone" id="drop-zone">
+        <p id="text"><b>Selecione/solte</b> sua nova foto </p>
+      </div>
+      <input type="file" id="file">
+    </form>
+    <button id="alterarFoto" onclick="removerFoto()">Remover foto de perfil</button>
+
+
+    <footer class="footer">
+      © 2025 Desenvolvido por TDS. Todos os direitos reservados.
+    </footer>
+  </main>
+
+  <script src="./js/alterarFotoPerfil.js"></script>
+  <script src="./js/areaOpcoes.js"></script>
 </body>
 
 </html>
