--- a/View/contato.html
+++ b/View/contato.html
@@ -1,47 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contato</title>
-    <link rel="stylesheet" href="./css/globalStyle.css" />
-    <link rel="stylesheet" href="./css/contato.css" />
-    <link rel="icon" href="./img/logo.png" />
-  </head>
-  <body>
-    <header>
-      <div id="abaInfos">
-        <figure id="logoFigure">
-          <img id="imgLogo" src="./img/logo.png" alt="Logo" />
-        </figure>
 
-        <figure id="nomeFigure">
-          <img src="./img/manualJovem.png" alt="Manual_do_Jovem" id="nomeImg" />
-        </figure>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Contato</title>
+  <link rel="stylesheet" href="./css/contato.css" />
+  <link rel="icon" href="./img/logo.png" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="./css/globalStyle.css" />
+</head>
+
+<body>
+  <header
+    class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom"
+    style="display: flex; width: 100vw; height: 13vh;background: linear-gradient(50deg,#4c4199, #111827); ">
+    <div class="col-md-3 mb-2 mb-md-0">
+      <a href="/" class="d-inline-flex align-items-center text-decoration-none">
+        <img src="./img/logo.png" alt="Logo" width="60" height="50" class="me-2" />
+        <span class="text-white fs-4">Manual do Jovem</span>
+      </a>
+    </div>
+
+    <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+      <li><a href="./tela-profissional.html" class="nav-link px-2 icon-home ativo"
+          style="color: white;">Profissional</a>
+      </li>
+      <li><a href="./tela-financeiro.html" class="nav-link px-2 icon-criar ativo" style="color: white;"> Financeiro</a>
+      </li>
+      <li><a href="./tela-pessoal.html" class="nav-link px-2 icon-insc ativo" style="color: white;">Pessoal</a>
+      </li>
 
       <div id="fotoDiv">
         <button id="fotoBtn" type="button">
           <img src="./img/fotoPadrao.png" alt="Foto Perfil" id="fotoImg" />
         </button>
       </div>
-    </header>
-    <main class="container">
-      <div class="informa">
-        <h2>Entre em contato conosco!</h2>
-        <textarea placeholder="Escreva sua dúvida ou sua reclamação"></textarea>
-        <button>ENVIAR</button>
-        <p>ou</p>
-        <a href="mailto:suportemanualdojovem@gmail.com" target="_blank"
-          >suportemanualdojovem@gmail.com</a
-        >
+    </ul>
+
+  </header>
+
+
+  <main class="container">
+    <div id="divInfos" class="hidden">
+      <div id="opcoesPerfil">
+        <a href="./editarPerfil.html" class="hrefPerfil">Editar Perfil</a>
+        <a href="./contato.html" class="hrefPerfil">Entrar em contato</a>
+        <a href="./redefinir.html" class="hrefPerfil">Redefinir Senha</a>
+        <a href="alterarFotoPerfil.html" class="hrefPerfil">Alterar foto de perfil</a>
       </div>
-    </main>
+    </div>
+
+    <div class="informacoes">
+      <h2>Entre em contato conosco!</h2>
+      <textarea placeholder="Escreva sua dúvida ou sua reclamação"></textarea>
+      <button id="enviarBtn" class="buttonTheme">ENVIAR</button>
+      <p>ou</p>
+      <a href="mailto:suportemanualdojovem@gmail.com" target="_blank" id="emailSuporte">suportemanualdojovem@gmail.com</a>
+    </div>
     <footer>
       <p>&copy; 2025 Desenvolvido por TDS. Todos os direitos reservados.</p>
     </footer>
+  </main>
 
-    <script src="./js/alterarFotoPerfil.js"></script>
-    <script src="./js/areaOpcoes.js" defer></script>
-  </body>
+  <script src="./js/alterarFotoPerfil.js"></script>
+  <script src="./js/areaOpcoes.js" defer></script>
+</body>
+
 </html>
