--- a/View/css/contato.css
+++ b/View/css/contato.css
@@ -4,10 +4,11 @@
     width: 300px;
     margin: 40px auto;
     text-align: center;
+
   }
   
   textarea {
-    width: 93.2%;
+    width: 600px;
     height: 150px;
     padding: 10px;
     margin: 10px 0;
@@ -17,24 +18,36 @@
     box-shadow: 2px 2px 1px black;
   }
   
-  button {
+  .informacoes  {
+        display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+
+  #enviarBtn {
     color: white;
     padding: 10px;
     border: none;
-    width: 100%;
-    border-radius: 6px;
+    width: 200px;
+    border-radius: 6px !important;
     font-weight: bold;
   }
   
-  a {
+ #enviar:hover {
+    background-color: #342795;
+      transform: scale(1.01);
+  }
+
+  #emailSuporte {
     color: rgb(255, 255, 255);
     text-decoration: none;
     display: block;
-    margin-top: 10px;
   }
 
   p{
     color: white;
+    margin: 0 !important;
   }
   
   h2{
