--- a/View/css/editarPerfil.css
+++ b/View/css/editarPerfil.css
@@ -1,10 +1,11 @@
-
 #container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   max-width: 400px;
-  margin: 40px auto;
-  padding: 20px;
   background-color: transparent;
 }
+
 
 #container h2 {
   color: white;
