--- a/View/css/globalStyle.css
+++ b/View/css/globalStyle.css
@@ -9,39 +9,72 @@ body {
   width: 100%;
   font-family: "Poppins", sans-serif;
   background: linear-gradient(to bottom, #182031, #28334b);
+
 }
 
 #Titulo {
+  text-align: center;
   color: #f9fafb;
   font-size: 50px;
+  margin: 0;
 }
 
-button:hover {
+.buttonTheme {
+  background-color: #6152cd;
+  color: white;
+  border: none;
+  padding: 12px;
+  border-radius: 8px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s, transform 0.2s;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.buttonTheme:hover {
+  background-color: #342795;
+  transform: scale(1.01);
   cursor: pointer;
 }
 
-button{
-  background-color: #6152cd;
-}
-
-/*botar o insta e no email*/
-
 footer {
-  background: linear-gradient(50deg,#4c4199, #111827);
-  color: rgb(255, 255, 255);
-  padding: 1rem;
-  text-align: left;
-  font-size: 0.9rem;
-  bottom: 0;
-  position: fixed;
   width: 100%;
-  box-shadow: inset 2px -2px 3px #263044;
+  height: 54px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  padding-top: 1rem !important;
+  padding: 0;
   align-items: center;
+  font-size: 0.9rem;
+  color: rgb(255, 255, 255);
+  box-shadow: inset 2px -2px 3px #263044;
+  background: linear-gradient(50deg, #4c4199, #111827);
 }
 
+.me-2 {
+  margin-left: 0.5rem !important;
+}
 
+.text-white {
+  width: 200px;
+}
 
+.mb-2 {
+  margin-bottom: 0 !important;
+  justify-content: center !important;
+}
 
+.justify-content-center {
+  justify-content: left;
+}
+
+ul.nav.col-12 {
+  justify-self: right;
+}
 
 img {
   height: 40px;
@@ -49,34 +82,33 @@ img {
 }
 
 #logo {
-  margin-left: 90%;
-  border-bottom: 1px 0 0 solid black !important;
   height: 60% !important;
   width: 3% !important;
+  margin-left: 90%;
+  border-bottom: 1px 0 0 solid black !important;
 }
 
-
 #abaInfos {
-  display: flex;
-  align-items: center;
   width: 100%;
   height: 13vh;
+  display: flex;
+  align-items: center;
 }
 
 #logoFigure {
+  width: 70px;
+  height: 13vh !important;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 70px;
-  height: 13vh !important;
 }
 
 #nomeFigure {
+  width: 200px;
+  height: 13vh !important;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 200px;
-  height: 13vh !important;
 }
 
 #nomeImg {
@@ -90,5 +122,73 @@ img {
 #imgLogo {
   margin-left: 5px;
   border: none;
-  margin-top: -15%;
+}
+
+.hidden {
+  display: none !important;
+}
+
+#divInfos {
+  width: 210px;
+  flex-direction: column;
+  display: flex;
+  justify-self: right !important;
+  position: fixed;
+  right: 0;
+  top: 64px;
+  padding: 20px;
+  gap: 30px;
+  border-radius: 10px 0 0 10px;
+  background: #dbdada;
+  box-shadow: inset 2px -2px 3px #263044;
+  color: black;
+}
+
+#divInfos:not(.hidden) {
+  display: flex;
+}
+
+#opcoesPerfil {
+  display: flex;
+  flex-direction: column;
+  transition: 3ms;
+}
+
+.py-3 {
+  width: 100%;
+  padding: 0 !important;
+  margin: 0;
+}
+
+li {
+  padding-top: 0.5rem !important;
+
+}
+
+.hrefPerfil {
+  margin-left: 26px;
+  color: black;
+  text-decoration: none;
+}
+
+#fotoBtn {
+  width: 70px;
+  display: flex;
+  justify-content: center;
+  padding: 0 !important;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+#fotoImg {
+  height: 55px;
+  width: 55px;
+  border: 2px solid white;
+  border-radius: 50px;
+}
+
+@media screen and (max-width:500px) {
+
+  
 }
