--- a/View/css/index.css
+++ b/View/css/index.css
@@ -1,20 +1,14 @@
-
 #container {
-  background-color: #111827;
-  height: 100%;
+  align-items: center;
+  height: calc(100vh - 65px - 54px);
   width: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
-main {
-  height: 100%;
+  flex-direction: row;
+  gap: 8px;
 }
 
 #esquecisenha {
-  z-index: 1;
   color: rgb(172, 8, 8);
 }
 
@@ -22,16 +16,20 @@ main {
   color: rgb(174, 6, 6);
 }
 
-img {
-  width: 19%;
-  height: auto;
+#imgLogo {
+  width: 80px ;
+  height: auto ;
+  margin: 0;
 }
 
 figure {
+  height: 80px;
   text-align: center;
+  margin: 0;
 }
 
 #breveDescricao {
+  margin: 0;
   font-size: 15px;
   color: #7d8995;
   text-align: center;
@@ -39,14 +37,19 @@ figure {
 
 #filho1 {
   margin-right: 40px;
+  width: 424px;
   align-items: center;
 }
 
 #filho2 {
-  width: 40%;
-  height: 40%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 500px !important;
+  height: 280px !important;
   background-color: rgb(186, 178, 178);
-  border-radius: 5%;
+  border-radius: 5px;
   text-align: center;
 }
 
@@ -67,7 +70,6 @@ button:hover {
     transform: scale(1.05);
 }
 
-
 #usuario,
 #senha,
 #entrarConta,
@@ -75,66 +77,58 @@ button:hover {
   display: block;
   margin: 0.5% auto;
   font-size: auto;
-  width: 75%;
+  width: 400px;
   margin-top: 3%;
 }
 
 #usuario,
 #senha {
-  height: 8%;
+  height: 30px;
   border-radius: 5px;
   border: none;
   padding: 5px;
 }
 
-#entrarConta,
-#criarConta {
-  overflow: hidden;
-}
-
-
-@media (max-width: 768px) {
+@media screen and (max-width: 799px) {
   #container {
-    flex-direction: column;
-    gap: 20px;
-  }
-
-  #filho1 {
-    margin-right: 0;
-
-  }
-
-  #filho2 {
-    height: 30% !important; 
-    width: 70% !important;
-  }
-
-  #breveDescricao {
-    font-size: 100% !important;
-  }
+  flex-direction: column;
+    height: calc(100vh - 50.73px - 43px);
+    margin-top: 20px;
+    gap: 0;
 }
 
-
-@media (max-width: 1024px) {
-
-  #breveDescricao {
-    font-size: 200%;
-  }
-
-  #filho2 {
-    height: 21%;
-    width: 70%;
-  }
+footer  {
+  height: 43px !important;
 }
 
-@media  (min-width: 1024px) and (min-height: 600px) {
-  img {
-    width: 12%;
-    height: auto;
-  }
-  #filho2 {
-    margin-bottom: 6%;
-    height: 44%;
-    width: 65%;
-  }
+#filho1 {
+  margin-right: 0;
+}
+
+#Titulo {
+  font-size: 200%;
+}
+
+#breveDescricao {
+  height: 60px !important;
+  font-size: small;
+}
+
+#filho2 {
+  width: 350px !important;
+  height: 240px !important;
+  margin-top: 30px;
+  margin: 0;
+}
+
+#loginForm > *  {
+  width: 220px;
+  height: 30px;
+  gap: 2px;
+}
+
+#entrarConta, #criarConta {
+  height: 40px !important;
+  font-size: 100% !important;
+}
 }
