--- a/View/redefinir2.html
+++ b/View/redefinir2.html
@@ -1,77 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Redefinir Senha</title>
-    <link rel="stylesheet" href="./css/globalStyle.css" />
-    <link rel="stylesheet" href="./css/redefinir2.css" />
-    <link rel="icon" href="./img/logo.png" />
-  </head>
-  <body>
-    
-    <header>
-      <div id="abaInfos">
-        <figure id="logoFigure">
-          <img id="imgLogo" src="./img/logo.png" alt="Logo" />
-        </figure>
 
-        <figure id="nomeFigure">
-          <img src="./img/manualJovem.png" alt="Manual_do_Jovem" id="nomeImg" />
-        </figure>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Redefinir Senha</title>
+  <link rel="stylesheet" href="./css/redefinir2.css" />
+  <link rel="icon" href="./img/logo.png" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="./css/globalStyle.css" />
+</head>
+
+<body>
+
+  <header
+    class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom"
+    style="display: flex; width: 100vw; height: 13vh;background: linear-gradient(50deg,#4c4199, #111827); ">
+    <div class="col-md-3 mb-2 mb-md-0">
+      <a href="/" class="d-inline-flex align-items-center text-decoration-none">
+        <img src="./img/logo.png" alt="Logo" width="60" height="50" class="me-2" />
+        <span class="text-white fs-4">Manual do Jovem</span>
+      </a>
+    </div>
+
+    <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+      <li><a href="./tela-profissional.html" class="nav-link px-2 icon-home ativo"
+          style="color: white;">Profissional</a>
+      </li>
+      <li><a href="./tela-financeiro.html" class="nav-link px-2 icon-criar ativo" style="color: white;"> Financeiro</a>
+      </li>
+      <li><a href="./tela-pessoal.html" class="nav-link px-2 icon-insc ativo" style="color: white;">Pessoal</a>
+      </li>
+    </ul>
+  </header>
+
+  <main class="container">
+    <div id="divCampos">
+      <p id="primeiraLinha">Vamos enviar o codigo de verificação via email </p>
+      <p id="segundaLinha"> Insira nos campos abaixo o código recebido</p>
+      <div>
+        <form action="">
+          <input type="text" maxlength="1" id="campo1" class="campo" pattern="[0-9]{1}" required />
+          <input type="text" maxlength="1" id="campo2" class="campo" pattern="[0-9]{1}" required />
+          <input type="text" maxlength="1" id="campo3" class="campo" pattern="[0-9]{1}" required />
+          <input type="text" maxlength="1" id="campo4" class="campo" pattern="[0-9]{1}" required />
+          <button type="submit" id="confirmar">confirmar</button>
+        </form>
       </div>
-    </header>
+    </div>
 
-    <main>
-      <div class="container">
-        <div id="divCampos">
-          <p id="primeiraLinha">Vamos enviar o codigo de verificação via email </p>
-           <p id="segundaLinha"> Insira nos campos abaixo o código recebido</p>
-          <div>
-            <form action="">
-              <input
-                type="text"
-                maxlength="1"
-                id="campo1"
-                class="campo"
-                pattern="[0-9]{1}"
-                required
-              />
-              <input
-                type="text"
-                maxlength="1"
-                id="campo2"
-                class="campo"
-                pattern="[0-9]{1}"
-                required
-              />
-              <input
-                type="text"
-                maxlength="1"
-                id="campo3"
-                class="campo"
-                pattern="[0-9]{1}"
-                required
-              />
-              <input
-                type="text"
-                maxlength="1"
-                id="campo4"
-                class="campo"
-                pattern="[0-9]{1}"
-                required
-              />
-              <button type="submit" id="confirmar">confirmar</button>
-            </form>
-          </div>
-        </div>
+    <footer class="footer">
+      © 2025 Desenvolvido por TDS. Todos os direitos reservados.
+    </footer>
+  </main>
 
-        <footer class="footer">
-          © 2025 Desenvolvido por TDS. Todos os direitos reservados.
-        </footer>
-      </div>
-    </main>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+</body>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  </body>
 </html>
