--- a/View/criarArtigo.html
+++ b/View/criarArtigo.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -8,7 +7,7 @@
   <link rel="stylesheet" href="./css/criarArtigo.css" />
   <link rel="icon" href="./img/logo.png" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="./css/globalStyle.css" />
+  <link rel="stylesheet" href="./css/globalStyle.css">
 </head>
 
 <body>
@@ -37,7 +36,6 @@
         </button>
       </div>
     </ul>
-
   </header>
 
 
